# zerg_pool

./: Cargo.toml  README.md  build.rs  coverage.sh
benches/: balancer_bench.rs  benchmark.rs  engine_bench.rs
examples/: basic.rs
proto/: task.proto  version.proto
src/: balancer.rs  event_loop.rs  lib.rs  worker.rs  zerg.rs
src/drone/: heartbeat.rs  mod.rs  network.rs  task_queue.rs
src/engine/: mod.rs
src/proto/: mod.rs  zergpool.rs
src/queen/: mod.rs  network.rs
tests/: balancer_test.rs  ema.rs  engine_test.rs  health_check.rs  load_balancer.rs  mio_performance_test.rs  mio_server_test.rs  queen_test.rs  registration.rs  router_dealer_test.rs  test_utils.rs  zerg_test.rs  zmq_server_test.rs
