[package]
name = "zerg_pool"
version = "0.1.0"
edition = "2021"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "High-performance thread pool with event loop integration"
license = "WTFPL"
repository = "https://github.com/0ldm0s/zerg_pool"

[dependencies]
# moving_averages = "0.1"  # 临时注释，等待镜像同步
moving_averages = { path = "../moving_averages" }  # 临时使用本地路径
once_cell = "1.18"
mio = { version = "1.0", features = ["os-poll", "net"] }
log = "0.4"
env_logger = "0.10"
crossbeam = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"] }
futures = "0.3"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.9.1"
zmq = "0.9"
uuid = { version = "1.3", features = ["v4", "serde"] }
num_cpus = "1.16"
chrono = "0.4"
prost-derive = "0.11"
prost = "0.11"
thiserror = "2.0.12"
protobuf = "3.7.2"
bytes = "1.0"
rayon = "1.10.0"
crossbeam-channel = "0.5.15"
lazy_static = "1.4.0"
sysinfo = "0.29"
ping = "0.4"
portpicker = "0.1.1"
metrics = "0.24.2"

[build-dependencies]
prost-build = "0.11"

[target.'cfg(unix)'.dependencies]
socket2 = "0.5"
nix = "0.27"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
criterion = "0.4"
log = "0.4"
env_logger = "0.10"
approx = "0.5"
proptest = "1.4"
cargo-tarpaulin = "0.27"

[[test]]
name = "load_balancer"
path = "tests/load_balancer.rs"

[[test]]
name = "balancer_integration"
path = "tests/balancer_test.rs"

[[bench]]
name = "balancer"
path = "benches/balancer_bench.rs"
